--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "4",
+    "@nozbe/watermelondb": "^0.27.1",
     "add": "^2.0.6",
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
@@ -26,7 +27,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-decorators": "^7.17.9",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
     "@types/react": "~17.0.21",
     "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
